--- a/css/resume.css
+++ b/css/resume.css
@@ -7,6 +7,11 @@ body {
    height: 100%;
    overflow: hidden;
  }
+
+ #LEFT,#UP,#RIGHT,#DOWN
+ {
+   visibility:hidden;
+ }
 @media (min-width: 992px) {
   body {
     padding-top: 0;
@@ -201,5 +206,10 @@ a:hover, a:focus, a:active {
   }
   .subheading{
     font-size: medium;
+  }
+
+ #LEFT,#UP,#RIGHT,#DOWN
+  {
+    visibility:visible;
   }
 }
