--- a/css/resume.css
+++ b/css/resume.css
@@ -145,6 +145,7 @@ p.lead {
 section.resume-section {
   padding-top: 5rem !important;
   padding-bottom: 5rem !important;
+  padding-left 5rem !important;
   max-width: 75rem;
 }
 
