--- a/css/resume.css
+++ b/css/resume.css
@@ -145,7 +145,6 @@ p.lead {
 section.resume-section {
   padding-top: 5rem !important;
   padding-bottom: 5rem !important;
-  padding-left 5rem !important;
   max-width: 75rem;
 }
 
@@ -163,6 +162,7 @@ section.resume-section {
   section.resume-section {
     padding-top: 3rem !important;
     padding-bottom: 3rem !important;
+    padding-left: 5rem !important;
   }
 }
 
