--- a/css/resume.css
+++ b/css/resume.css
@@ -1,6 +1,6 @@
 body {
     padding-top: 54px;
-    background-image: url('../img/architecture-buildings-calm-1519088.jpg');
+    background-image: url('https://cdn.cnn.com/cnnnext/dam/assets/140630134917-12-canada-most-beautiful-places-super-169.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
