--- a/css/resume.css
+++ b/css/resume.css
@@ -1,6 +1,6 @@
 body {
     padding-top: 54px;
-    background-image: url('https://cdn.cnn.com/cnnnext/dam/assets/140630134917-12-canada-most-beautiful-places-super-169.jpg');
+    background-image: url('http://thecampfiregrill.ca/wp-content/uploads/2016/12/toronto-cn-tower-illumination-ontario-calm-travel-attractions-canada.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
