--- a/css/resume.css
+++ b/css/resume.css
@@ -5,7 +5,7 @@ body {
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
-    color: 004e8a;
+    color: #004e8a;
 }
 
 #img{
